# master-thesis

./: .editorconfig  .env  .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  Makefile.container  README.md  docker-compose.yml  main.cpp
_thesis/: annotation_en.txt  annotation_sk.txt  keywords.txt
_thesis/media/: control-flow.drawio  phishing-attack-diagram.drawio
benchmark-url/: CCppRestSdk.hpp  CFolly.hpp  CMakeLists.txt  CNetworkUri.hpp  CPoco.hpp  CQt.hpp  CSkyrUrl.hpp  CUriparser.hpp  IBenchmark.h  README.md  SkyrUrl.hpp  Uriparser.hpp  benchmark-url-libs.md  boost_asio.hpp  main.cpp
code/: .gitignore  URLlib.cpp  URLlib.h  phishtank.py
code/phishing-app/: .gitignore  CMakeLists.txt  example-database.csv  main.cpp  url_anomalies.cpp  url_anomalies.h
code/phishing-app/phishtank/: phishtank.cpp  phishtank.h
code/urllib-cpp/: CMakeLists.txt  URLlib.cpp  URLlib.h  urllib.cpp  urllib.h
data-science/: .gitignore  README.md
data-science/jupyter-notebooks/: asn.ipynb  config.py  feature-reduction.ipynb  html_features.ipynb
libs/: config.cpp  config.h  database.cpp  database.h
literature/: bib.tex  list.txt
master-thesis-additional-stuff/: description-cz.txt
misc/: 01-description-cz.txt  01-description-en.txt  02-phishtank.md  03-development-server.md  phishing-detection-diagram.xml
misc/literature/: bib.tex  list.txt
modules/html-analysis/: .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json
modules/html-analysis/src/: README.md  fetchWithTimeout.js  index.js
modules/html-analysis/test/: disable-rightclick.test.js  hostname-title.test.js  popup-window.test.js  rewrite-statusbar.test.js
modules/model-checker/: .dockerignore  .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  model.py  model_checker.py
modules/phish-score/src/: env.h  model_checker.cpp
modules/phishscore/: .env  Dockerfile  Makefile
modules/phishscore/src/: check_url.cpp  check_url.h  database.h  feature_vector.cpp  feature_vector.h  help_functions.h  main.cpp  model_checker.cpp  model_checker.h  options.h  program.cpp  program.h  server.cpp  server.h  training_data.cpp  training_data.h
modules/phishscore/test/: host_based_features.cpp  url_features.cpp
modules/phishtank-updater/: .eslintrc.js  Dockerfile  README.md  cronjob  ormconfig.json  package-lock.json  package.json
modules/phishtank-updater/src/: index.js
modules/phishurl_fetcher/: .babelrc  .editorconfig  .eslintignore  .eslintrc.js  .gitignore  README.md  docker-compose.yaml  ormconfig.json  package-lock.json  package.json  tsconfig.json
modules/phishurl_fetcher/src/: index.ts
old_project_structure/benchmark-url/: main.cpp  urls-5000.txt
old_project_structure/code/: url_anomalies.cpp  url_anomalies.h
old_project_structure/misc/: 04022018.txt  05-2nd-meeting.txt
old_project_structure/text-urls-to-database/: CMakeLists.txt  README.md  main.cpp
old_project_structure/url-tests/: README.md  UrlTest.h
phishtank-updater/: package-lock.json  package.json
phishtank-updater/src/: index.js
phishtank-updater/src/operations/: phishtank.js
phishtank-updater/src/utils/: utils.js
socket-client/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  socket_client.cpp  socket_client.h
src/server/: CMakeLists.txt  main.cpp  socket_server.cpp  socket_server.h  url_test.cpp  url_test.h
supplementary-materials/: 01-description-en.txt  02-phishtank.MD  03-development-server.md  04-dnsbl-db.md  05-2nd-meeting.txt  diagram-uses.xml
tasks-to-do/: 2.MD
tests/: CMakeLists.txt  config_test.cpp
tests/gtest/: CMakeLists.txt
thesis-text/media/: phishing-attack-email.drawio
url-tests/: CMakeLists.txt  UrlTest.cpp  UrlTest.h  main.cpp
v2/: .gitignore  Dockerfile  Makefile.container  control-flow.drawio  docker-compose.prod.yml  docker-compose.yml  filter-urls.sh
v2/html_features_js/: .editorconfig  .env  .eslintrc.js  Makefile  bad.txt  bigger.txt  input.txt  one.txt  package-lock.json  package.json
v2/html_features_js/src/: fetchWithTimeout.js  index.js  page.js
v2/html_features_js/test/: ahref-link.test.js  disable-rightclick.test.js  favicon-link.test.js  form-handler.test.js  hostname-title.test.js  input-tag.test.js  invisible-iframe.test.js  missleading-link.test.js  popup-window.test.js  (+2 more)
v2/python/: .gitignore  INSTALL.md  Makefile  Untitled-1.py  model.py  requirements.txt
v2/service/: .dockerignore  .editorconfig  .env  CMakeLists.txt  Dockerfile  Makefile  REMARKS.md  docker-compose.yml  run.sh
v2/service/src/: CMakeLists.txt  database.cpp  database.h  env.h  help_functions.cpp  help_functions.h  main.cpp  model_checker.cpp  model_checker.h  program.cpp  program.h  safebrowsing_api.cpp  safebrowsing_api.h  training_data.cpp  training_data.h
v2/service/src/features/: all_features.cpp  all_features.h  asn_csv_to_map.sh  asn_rogue_index.csv  asn_rogue_index.h  domain_count.cpp  domain_count.h  extra_https.cpp  extra_https.h  feature_base.cpp  feature_base.h  feature_enum.h  features.cpp  features.h  fragment_length.cpp  fragment_length.h  host.cpp  host.h  host_based_features.cpp  host_based_features.h  host_length.cpp  host_length.h  html_features.cpp  html_features.h  https_used.cpp  https_used.h  ip_address.cpp  ip_address.h  non_std_port.cpp  non_std_port.h  path_length.cpp  path_length.h  query_length.cpp  query_length.h  shortening_service.cpp  shortening_service.h  spec_char.cpp  spec_char.h  spec_keywords.h  tld.cpp  (+6 more)
v2/service/src/features/url_features/: domain_count.h  extra_https.h  fragment_length.cpp  fragment_length.h  host.h  host_length.cpp  host_length.h  https_used.h  ip_address.h  non_std_port.h  path_length.cpp  path_length.h  query_length.h  shortening_service.h  spec_char.cpp  spec_char.h  spec_keywords.cpp  spec_keywords.h  url_features.h  url_length.cpp  url_length.h  user_info.cpp  user_info.h
v2/service/test/: CMakeLists.txt  help_functions.cpp  host_based_features.cpp  html_features.cpp  main.cpp  network_responses.hpp  url_features.cpp
v2/training-data/: filter-urls.sh
(+39 files in other folders)
